--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Note that it is a violation of the honor code to read our source code during the CS154 project if you are in the class. We trust that you will honor this.
 
+Except now the class is over so whatever.
+
 3333360 - The maximum score achievable in the original version of Pac-Man (http://en.wikipedia.org/wiki/Pac-Man#Perfect_play) 
